--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -142,6 +142,9 @@ h1, h2, h3, h4, h5, h6 {
   color: #333;
     font-size: 3vh;
 }
+h5, h6 {
+    font-size: 2vh;
+  }
 body, html {
   width: 100%;
   height: 100%;
@@ -514,7 +517,7 @@ li.lang_active > a {
   }
 }
 #sub-footer {
-    background-color: #f7f7f7;
+    background-color: transparent;
     position: fixed;
     bottom: 0;
     left: 0;
