--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -419,7 +419,7 @@ table.tablesorter, table.tablesorter thead tr th {
 
 #wrap > .container {
     padding-left: 50px;
-    padding-right: 21px;
+    padding-right: 27px;
 }
 
 .modal {
@@ -671,6 +671,11 @@ table {
 .table-inside {
   max-height: 100px;
   overflow-y: auto;
+    margin: 0.5em 0;
+    border: 1px solid #cbcbcb;
+    table {
+        margin: 0 !important;
+    }
 }
 
 .dropdown-submenu {
@@ -789,18 +794,25 @@ table.dataTable thead .sorting_asc:before,
 table.dataTable thead .sorting_desc:before,
 table.dataTable thead .sorting_asc_disabled:before,
 table.dataTable thead .sorting_desc_disabled:before {
-    font-family: "Font Awesome 5 Free";
-    content: "\f0dd";
-    color: $brand-danger;
-    font-size: 125%;
+    font-family: "Font Awesome 5 Free" !important;
+    content: "\f0dd" !important;
+    color: $brand-danger !important;
+    font-size: 125% !important;
 }
 table.dataTable thead .sorting:after,
 table.dataTable thead .sorting_asc:after,
 table.dataTable thead .sorting_desc:after,
 table.dataTable thead .sorting_asc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:after {
-    font-family: "Font Awesome 5 Free";
-    content: "\f0de";
-    color: $brand-danger;
-    font-size: 125%;
+    font-family: "Font Awesome 5 Free" !important;
+    content: "\f0de" !important;
+    color: $brand-danger !important;
+    font-size: 125% !important;
+}
+table.dataTable {
+    tbody {
+        tr.odd {
+            background-color: #9a9a9a5e;
+        }
+    }
 }
