--- a/resources/assets/scss/incl/posts.scss
+++ b/resources/assets/scss/incl/posts.scss
@@ -56,7 +56,7 @@
         border: none;
     }
     .glyphicon {
-        color: #A8A5A5;
+        color: $brand-danger;
     }
     .edit {
         padding-left: 1em;
