--- a/resources/assets/scss/new_reservation.scss
+++ b/resources/assets/scss/new_reservation.scss
@@ -66,10 +66,10 @@
   padding: 0.6vh;
   font-size: 1.75vh;
 }
-.GU-solid:hover {
+.GU-solid {
   background-color: rgba(0, 0, 225, 0.5);
 }
-.WO-solid:hover {
+.WO-solid {
   background-color: rgba(255, 40, 0, 0.5);
 }
 .WO-datepicker-content {
@@ -88,7 +88,9 @@
     background: rgba(0, 0, 225, 0.18) !important;
     border-radius: 0 !important;
 }
-
+.datepicker-title {
+    font-size: 24px;
+}
 .WO-datepicker-title {
     color: rgba(255, 40, 0, 0.5) !important;
 }
@@ -132,7 +134,7 @@
     overflow-x: hidden;
     overflow-y: auto;
 }
-[id^="remove_guest_"], #clone_guest {
+[id^="remove_guest_"], [id^="clone_guest"] {
     font-size: 1em;
     display: inline !important;
     border: none !important;
@@ -345,6 +347,10 @@ label {
     color: #333;
     [id^="free-beds_"] {
         padding: 0.25em 0.5em;
+        display: block;
+        &:after {
+            content: "";
+        }
     }
 }
 
@@ -368,7 +374,7 @@ label {
     #timeliner {
         max-height: 350px;
         overflow: auto;
-        top: 63px;
+        top: 72px;
         bottom: inherit;
         position: absolute;
         border-radius: 0;
@@ -426,6 +432,9 @@ label {
                     border: 0;
                     border-top: 1px solid #33333369;
                 }
+            }
+            th.next, th.prev, th.datepicker-switch {
+                font-size: 30px;
             }
         }
     }
