--- a/resources/assets/scss/datatables_roomapp.scss
+++ b/resources/assets/scss/datatables_roomapp.scss
@@ -17,6 +17,7 @@
         tr {
             td {
                 vertical-align: middle;
+                padding: 0 2px;
                 &:before {
                     background-color: #b7282e;
                 }
@@ -33,7 +34,9 @@
                     top: 3px;
                     left: 1px;
                 }
-
+                ul {
+                    padding-left: 2px;
+                }
             }
             &.odd {
                 background-color: #cbcbcb;
