--- a/resources/assets/scss/new_reservation.scss
+++ b/resources/assets/scss/new_reservation.scss
@@ -88,9 +88,6 @@
     background: rgba(0, 0, 225, 0.18) !important;
     border-radius: 0 !important;
 }
-.datepicker-title {
-    font-size: 24px;
-}
 .WO-datepicker-title {
     color: rgba(255, 40, 0, 0.5) !important;
 }
@@ -110,12 +107,9 @@
     }
 }
 #resButtons {
-    position: fixed;
-    bottom: 12px;
-    left: 55px;
-    width: calc(100% - 55px);
-    border-top: 1px solid $brand-danger;
+    width: 100%;
     padding: 0.5em 0;
+    background: white;
     button {
         width: 100%;
     }
@@ -424,8 +418,8 @@ label {
                 color: #000000;
             }
             th, td {
-                width: 55px !important;
-                height: 40px !important;
+              //  width: 55px !important;
+              //  height: 40px !important;
                 hr {
                     margin-top: 0;
                     margin-bottom: 0;
@@ -433,13 +427,16 @@ label {
                     border-top: 1px solid #33333369;
                 }
             }
-            th.next, th.prev, th.datepicker-switch {
-                font-size: 30px;
-            }
         }
     }
 }
 .jquery-hover-a {
     background-color: #b7282e !important;
     color: white !important;
+}
+@media screen and (max-width: 425px) {
+
+    #guest_entries {
+        max-height: 42vh;
+    }
 }
