--- a/resources/assets/scss/incl/navbar.scss
+++ b/resources/assets/scss/incl/navbar.scss
@@ -236,7 +236,7 @@ ul {
 #res-nav {
     min-height: 70px;
     width: 100%;
-    #free_beds, #timeliner-container, #timeliner {
+    #free_beds, #timeliner-container, #timeliner, #legend-container {
         height: 70px;
         border: none;
         .fa-clock:after {
