--- a/resources/assets/scss/incl/form.scss
+++ b/resources/assets/scss/incl/form.scss
@@ -8,18 +8,10 @@ div.mce-edit-area{
 input[readonly], input[disabled] {
   border: 1px solid rgba($brand-primary, 0.4);
 }
-.form-control {
-  background-color: #fff;
-  background-image: none;
-  margin: 0.35em 0;
-  border: 1px solid $color-h1;
-  color: $color-form-el;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-  -webkit-transition: border-color ease-in-out 0.15s,box-shadow ease-in-out 0.15s;
-  -o-transition: border-color ease-in-out 0.15s,box-shadow ease-in-out 0.15s;
-  transition: border-color ease-in-out 0.15s,box-shadow ease-in-out 0.15s;
+.form-control, .input-group-addon, button:not(.navbar-toggle), input[readonly] {
+    height: 2.55em;
+    border: .13333em solid #b7b7b7;
+    border-radius: .13333em;
 }
 .form-control:focus {
   border-color: $brand-primary !important;
@@ -76,7 +68,7 @@ form {
         /*white-space: nowrap;*/
         display: block;
       color: #333;
-      font-size: 1.2em;
+      font-size: 1.0em;
     }
     input:focus {
         border-color: $color-h1 !important;
@@ -84,7 +76,7 @@ form {
         -webkit-box-shadow: 0 0 5px rgba($color-h1, 0.4) !important;
     }
     fieldset {
-        border: 1px solid $color-h1;
+        border: 1px solid #ccc;
         padding: 0.75em 0.75em;
         margin: 1em 0;
         img {
@@ -110,38 +102,28 @@ form {
     legend {
       border: none;
       color: #333;
+        font-size: 18px;
         margin: 10px 0.5em 5px 0.5em;
         padding: 0 0.25em;
         width: auto;
     }
-    :required {
-        border: 2px solid $color-h1;
-    }
-    .required {
-        border: 2px solid $color-h1;
-    }
-    .required-help-text {
-        width: 80%;
-        margin: auto;
-    }
-    .requ:before {
-        content: "*";
-        color: $color-h1;
-        float: right;
+    .requ {
+        color: $brand-danger;
+        &:after {
+            content: " *";
+        }
     }
     .inline-input-long {
         float: left;
-        max-width: 71%;
+        max-width: 50%;
     }
     .inline-input-short {
         float: left;
         max-width: 29%;
         border-right: none;
     }
-    input[name=example] {
-        background-color: #ffffff !important;
+    input {
     }
-
 }
 
 .btn:focus, .btn:active:focus, .btn.active:focus, button:focus, button:active {
