debug final before going live

--- a/resources/assets/scss/new_reservation.scss
+++ b/resources/assets/scss/new_reservation.scss
@@ -438,6 +438,7 @@ label {
             td.myRes {
                 background: #b7282e7a !important;
                 color: #f7f7f7 !important;
+                cursor: not-allowed !important;
             }
             th, td {
               //  width: 55px !important;
