Bugfix in bill list: totals

--- a/resources/assets/scss/datatables_roomapp.scss
+++ b/resources/assets/scss/datatables_roomapp.scss
@@ -37,6 +37,9 @@
                 ul {
                     padding-left: 2px;
                 }
+                &.details {
+                    min-width: 23px;
+                }
             }
             &.odd {
                 background-color: #cbcbcb;
@@ -54,5 +57,4 @@
             }
         }
     }
-
 }
