Debug fix occupied beds on new & edit Reservation

--- a/resources/assets/scss/incl/bill.scss
+++ b/resources/assets/scss/incl/bill.scss
@@ -17,6 +17,11 @@
 
 }
 #bills_wrapper {
+    .dataTables_info {
+        position: fixed;
+        top: 132px;
+        font-weight: bold;
+    }
     #bills {
         tbody {
             tr {
