--- a/resources/assets/scss/all_reservation.scss
+++ b/resources/assets/scss/all_reservation.scss
@@ -1,6 +1,30 @@
 @import "incl/bootstrap-variables";
 @import "incl/vars";
 @import "incl/mixins";
+@media screen and (max-width: 425px) {
+    #free_beds, #legend-container {
+        height: auto !important;
+        li {
+            height: auto !important;
+            z-index: 1000 !important;
+            a {
+                height: auto !important;
+                padding-top: 10px !important;
+                padding-bottom: 10px !important;
+            }
+        }
+    }
+}
+@media screen and (max-width: 374px) {
+    .input-group {
+        display: block;
+        .input-group-addon {
+            width: 100% !important;
+            display: inline-block;
+            margin-left: 0px !important;
+        }
+    }
+}
 [id^="all_reservations_"] {
   border: 1px solid $brand-danger;
   padding: 23px;
