--- a/resources/assets/scss/new_reservation.scss
+++ b/resources/assets/scss/new_reservation.scss
@@ -269,8 +269,8 @@ label {
   top: -5px;
   right: -9px;
 }
-#show-all-free-beds {
-    padding-top: 30px;
+#legend-container li a {
+    padding-top: 18px;
     padding-bottom: 12px;
 }
 #timeliner-container {
