--- a/resources/assets/scss/incl/navbar.scss
+++ b/resources/assets/scss/incl/navbar.scss
@@ -210,7 +210,7 @@ ul {
     }
 }
 #userNav {
-    background-color: #777777c9;
+    background-color: #777777;
     li {
         a {
             padding-left: 15px;
